fix link errors

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <a href="./index.html" class="mnav__link">Главная</a>
                 <a href="./service.html" class="mnav__link">Виды работ</a>
                 <a href="./objects.html" class="mnav__link">Наши объекты </a>
-                <a href="./index.html/#service" class="mnav__link">О нас</a>
-                <a href="./index.html/#contacts" class="mnav__link">Контакты</a>
+                <a href="./index.html#service" class="mnav__link">О нас</a>
+                <a href="./index.html#contacts" class="mnav__link">Контакты</a>
             </div>
         </div>
         <div class="tnav__back">
@@ -43,8 +43,8 @@
                 <a href="./index.html" class="bnav__link">Главная</a>
                 <a href="./service.html" class="bnav__link">Виды работ</a>
                 <a href="./objects.html" class="bnav__link">Наши объекты</a>
-                <a href="./index.html/#service" class="bnav__link">О нас</a>
-                <a href="./index.html/#contacts" class="bnav__link">Контакты</a>
+                <a href="./index.html#service" class="bnav__link">О нас</a>
+                <a href="./index.html#contacts" class="bnav__link">Контакты</a>
             </div>
         </div>
 
@@ -104,7 +104,7 @@
                                 <p class="service__name">Утепление и отделка фасадов и балконов</p>
                             </div>
                         </div>
-                        <a href="#" class="service__btn">Посмотреть виды работ подробнее</a>
+                        <a href="./service.html" class="service__btn">Посмотреть виды работ подробнее</a>
                     </div>
                     <div class="plus__back">
                         <div class="plus__container">
