--- a/privacy.html
+++ b/privacy.html
@@ -18,8 +18,8 @@
                 <a href="./index.html" class="mnav__link">Главная</a>
                 <a href="./service.html" class="mnav__link">Виды работ</a>
                 <a href="./objects.html" class="mnav__link">Наши объекты </a>
-                <a href="./index.html/#service" class="mnav__link">О нас</a>
-                <a href="./index.html/#contacts" class="mnav__link">Контакты</a>
+                <a href="./index.html#service" class="mnav__link">О нас</a>
+                <a href="./index.html#contacts" class="mnav__link">Контакты</a>
             </div>
         </div>
         <div class="tnav__back">
@@ -43,8 +43,8 @@
                 <a href="./index.html" class="bnav__link">Главная</a>
                 <a href="./service.html" class="bnav__link">Виды работ</a>
                 <a href="./objects.html" class="bnav__link">Наши объекты</a>
-                <a href="./index.html/#service" class="bnav__link">О нас</a>
-                <a href="./index.html/#contacts" class="bnav__link">Контакты</a>
+                <a href="./index.html#service" class="bnav__link">О нас</a>
+                <a href="./index.html#contacts" class="bnav__link">Контакты</a>
             </div>
         </div>
 
